# ai-targeted-isa

./: .flake8  .gitignore  .markdownlint.json  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  DECISIONS.md  README.md  pipeline_design.md  prior_art.md  pyproject.toml
.github/workflows/: lint.yml
ontology/: ai-targeted-isa.json  ai-targeted-isa.yaml
scripts/: pre-commit-hook.sh  setup-venv.sh
tooling/src/ai_isa_audit/: __init__.py  __main__.py  audit.py  cli.py  consistency.py  formatter.py  parser.py  resolver.py  types.py
tooling/src/ai_targeted_isa_ontology/: __init__.py  __main__.py  build.py  models.py  types.py
tooling/tests/: test_audit_audit.py  test_audit_consistency.py  test_audit_formatter_cli.py  test_audit_parser.py  test_audit_resolver.py  test_build.py  test_models.py  test_types.py
